--- a/.classpath
+++ b/.classpath
@@ -13,6 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Users/savan/Downloads/jar_files/mysql-connector-java-8.0.30.jar"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-8.5.78/lib/mysql-connector-j-8.0.33.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
